Fixed footer to properly align to center and float to left and right (#8)

--- a/index.css
+++ b/index.css
@@ -4,10 +4,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* a {
-  text-decoration: none;
-} */
-
 a {
   text-decoration: none;
 }
@@ -22,10 +18,14 @@ a:hover {
 
 .languages a {
   color: #1a0dab;
+  padding: 0 3px;
 }
 
-.footer a {
+.footer a,
+.footer-middle a {
   color: #70757a;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 .footer a:active {
@@ -107,8 +107,6 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  /* margin-left: auto;
-  margin-right: auto; */
   margin-top: 30px;
 }
 
@@ -175,21 +173,31 @@ fas {
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 0 0.5rem;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 40px;
   align-items: center;
   background-color: #f2f2f2;
   border-top: 1px solid #dadce0;
-  font-size: 14px;
   color: #70757a;
 }
 
-.footer-left,
-.footer-right {
+.footer-left {
+  float: left;
+  min-width: 30%;
+  text-align: left;
   display: flex;
+  flex-direction: row;
+}
+
+.footer-right {
+  float: right;
+  min-width: 30%;
+  text-align: right;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
 }
 
 .footer-left-element {
@@ -204,10 +212,6 @@ fas {
 
 .footer-right-element {
   padding-right: 1.5rem;
-}
-
-.footer-right {
-  padding-right: 1rem;
 }
 
 /* MEDIA QUERIES */
